# Ranking

./: .dockerignore  .gitignore  .pre-commit-config.yaml  README.md  config.yml  dockerfile  main.ipynb  makefile  pyproject.toml  requirements.txt
.github/actions/setup-python-poetry/: action.yml
.github/workflows/: ci_cd.yml  ci_pipeline.yml
api/: index.html  main.py
app/: main.py
main/: config.yml  config_deploy.yml  fastapi.py  frontend.html  index.html  inference.py  predict.py  train.py
main/artifacts/: model.joblib
notebooks/: association_rules.ipynb  config.yml  eda.ipynb  inference.ipynb  model_testing.ipynb  ranking.ipynb  retrieval.ipynb  train.ipynb  train_predict.ipynb  two_tower.ipynb
notebooks/model/: fp_arules.ipynb  optimization.ipynb
notebooks/modeling/: optimization.ipynb
src/data/: load.py  loader.py  prepare.py  utils.py
src/features/: features.py  utils.py
src/models/: baseline.py  candidate.py  co_visit.py  cv_iterator.py  evaluator.py  ranker.py  retrieval.py  tracker.py  tuner.py  two_tower.py  utils.py
tests/: conftest.py  test_inference.py  test_performance.py
