[project]
name = "ranking"
version = "0.1.0"
description = "recsys based on ranking model"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "numpy==1.26.4"
    , "pandas==2.2.3"
    , "PyYAML==6.0.2"
    , "scikit-learn==1.6.1"
    , "xgboost==2.1.4"
    , "optuna==4.3.0"
    , "scikit-surprise==1.1.3"
    , "lightfm"
    , "matplotlib==3.10.1"
    , "mlxtend==0.23.4"
    , "joblib==1.4.2"
    ]

[tool.setuptools]
packages = ["src"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
