[tool.poetry]
name = "ranking"
version = "0.1.0"
description = "Recsys based on ranking model"
authors = ["Bob"]
readme = "README.md"
packages = [
    { include = "src" }
]

# Define dependencies
[tool.poetry.dependencies]
python = "^3.10"
numpy = "1.26.4"
pandas = "2.2.3"
PyYAML = "6.0.2"
scikit-learn = "1.6.1"
xgboost = "2.1.4"
lightgbm = "4.6.0"
optuna = "4.3.0"
scikit-surprise = "*"
matplotlib = "3.10.1"
mlxtend = "0.23.4"
joblib = "1.4.2"
fastapi = "0.115.12"
uvicorn = "0.34.1"
gunicorn = "23.0.0"

# Development dependencies
[tool.poetry.group.dev.dependencies]
pytest = "*"
flake8 = "*"
black = "*"
pytest-benchmark = "*"
pytest-cov = "*"
pytest-timeout = "*"
pytest-xdist = "*"
bandit = "*"
safety = "*"

# Pytest configuration options
[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --strict-markers"
testpaths = ["tests"]
markers = [
    "unit: Unit tests",
    "performance: Performance tests",
    "slow: Slow running tests",
]
timeout = 300
